--- a/package.json
+++ b/package.json
@@ -4,19 +4,60 @@
   "description": "Customziable page transition components for React Router",
   "main": "lib/PageTransition.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "NODE_ENV=development webpack-dev-server --mode development",
+    "build": "NODE_ENV=production webpack --mode production"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Phoenix1355/react-page-transition.git"
   },
   "keywords": [
-    "React"
+    "react",
+    "react-router",
+    "transition",
+    "page",
+    "route",
+    "routing"
   ],
   "author": "Christian H. Bohlbro",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Phoenix1355/react-page-transition/issues"
   },
-  "homepage": "https://github.com/Phoenix1355/react-page-transition#readme"
+  "homepage": "https://github.com/Phoenix1355/react-page-transition#readme",
+  "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "autoprefixer": "^9.4.6",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "babel-preset-react-app": "^7.0.0",
+    "css-loader": "^2.1.0",
+    "eslint": "^5.12.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.15.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.12.4",
+    "extract-css-chunks-webpack-plugin": "^3.3.2",
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "json-loader": "^0.5.7",
+    "node-sass": "^4.11.0",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14"
+  },
+  "dependencies": {
+    "history": "^4.7.2",
+    "prop-types": "^15.6.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-helmet": "^5.2.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1"
+  }
 }
