--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,13 +14,7 @@
     "rules": {
         "no-console": "off",
         "indent": ["error", 4],
-        "comma-dangle": ["error", {
-            "arrays": "always",
-            "objects": "always",
-            "imports": "never",
-            "exports": "always",
-            "functions": "ignore"
-        }],
+        "comma-dangle": ["error", "only-multiline"],
         "react/jsx-indent": ["error", 4],
         "react/jsx-indent-props": ["error", 4],
         "react/jsx-filename-extension": [
@@ -44,7 +38,8 @@
         "import/resolver": {
             "node": {
                 "paths": [
-                    "app"
+                    "examples",
+                    "packages"
                 ]
             }
         }
