--- a/packages/page-transition/package.json
+++ b/packages/page-transition/package.json
@@ -25,7 +25,8 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
-    "babel-preset-react-app": "^7.0.0"
+    "babel-preset-react-app": "^7.0.0",
+    "webpack": "^4.40.2"
   },
   "dependencies": {
     "prop-types": "^15.6.2",
